--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -11,9 +11,9 @@
      
         **Speakers**
       
-          - Clinton Carter, Ph.D., Post-Doc Scholar, Penn State, Genetic Anthropologist
+          - Carter Clinton, Ph.D., Post-Doc Scholar, Penn State, Genetic Anthropologist
 
-          - Sharon Klau
+          - Sandra R. Kalu, Ph.D., LMSW, Assistant Professor, School of Social Work, Howard University
           
           - Williams Spriggs, Ph.D., Professor, Economics Department, Howard University & Chief Economist for the AFL-CIO
 
@@ -27,7 +27,12 @@
 
         
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* with authors [Dr. Randal Pinkett](https://www.randalpinkett.com/) and [Dr. Jeffrey Robinson](https://www.business.rutgers.edu/faculty/jeffrey-robinson) [(slide)](https://docs.google.com/presentation/d/1DQdFX0osncnS4Rq_U5vHWxFm0qwDYxtv_xWcHc8QFLA/edit?usp=sharing) (*Zoom*) [(video)](https://youtu.be/B5V2s8xoi08) (LIVE Q+A)"
+    - name: "1:15 - 2:15 A Discussion of *Black Faces in High Places: 10 Strategic Actions for Black Professionals to Reach the Top and Stay There* [(slide)](https://docs.google.com/presentation/d/1DQdFX0osncnS4Rq_U5vHWxFm0qwDYxtv_xWcHc8QFLA/edit?usp=sharing) (*Zoom*) [(video)](https://youtu.be/B5V2s8xoi08) (LIVE Q+A)
+      
+        - [Dr. Randal Pinkett](https://www.randalpinkett.com/) 
+        
+        - [Dr. Jeffrey Robinson](https://www.business.rutgers.edu/faculty/jeffrey-robinson)"
+        
     - name: "2:15 - 2:30 Break"
     - name: '2:30 - 5:30 R Workshop "Making Computational Methods Accessible: R basics and Data Wrangling" (*Zoom*) (video)
         
@@ -261,6 +266,7 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about SICSS-H/M mass collaboration activity (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
+    - name: "3:45 - 5:30 Data Assurance"
 
 
 - date: 2022-06-25
@@ -307,7 +313,7 @@
     - name: "2:15 - 3:15 Round 7-12 (*Zoom*)"
     - name: "3:15 - 3:30 Break"
     - name: "3:30 - 4:00 Group debrief (join research teams) (*Zoom*)"
-    - name: '4:00 - 5:30 [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1eOxfSEa48KFQILR4o5MN_D9aPgQfdNh2UTwE62oYLGA/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
+    - name: '4:00 - 5:30 Guest Speaker #1: [Karen Levy, Ph.D.](https://sts.cornell.edu/karen-levy), Assistant Professor, Information Sciences, Cornell University, "Robotruckers: The Double Threat of AI for Low-Wage Work" [(video)](https://youtu.be/ZXstvgxY0Hs) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1eOxfSEa48KFQILR4o5MN_D9aPgQfdNh2UTwE62oYLGA/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
     
   
 - date: 2022-06-28
@@ -338,7 +344,7 @@
         
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 [Brandeis Marshall, Ph.D.](https://www.brandeismarshall.com/), CEO DataedX Group and Professor of Computer Science Spelman College (on sabbatical leave), "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE session to include Q&A and office hour [(slide)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) (LIVE Q+A)'
+    - name: '4:00 - 5:30 Guest Speaker #2: [Brandeis Marshall, Ph.D.](https://www.brandeismarshall.com/), CEO DataedX Group and Professor of Computer Science Spelman College (on sabbatical leave), "Data Conscience: Algorithmic Siege on Our Humanity" [(video)](https://youtu.be/kTDYFMXAuNM) - LIVE session to include Q&A and office hour [(slide)](https://drive.google.com/file/d/1Zc2CtECfPOP9kujbVfxSfRlXJBnI5jde/view?ts=62a6327b) (*Zoom*) (LIVE Q+A)'
     
     
 - date: 2022-06-29
@@ -352,7 +358,7 @@
         - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost for Graduate Studies, Dean of the Graduate Division, & Professor Graduate School of Education"  
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: '4:00 - 5:30 [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
+    - name: '4:00 - 5:30 Guest Speaker #3: [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
 
 
 - date: 2022-06-30
@@ -374,15 +380,16 @@
         - [Mark Duerksen, Ph.D.](https://africacenter.org/experts/dr-mark-duerksen/), Research Associate, Africa Center for Strategic Studies" 
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
-    - name: "4:00 - 5:30 [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School, “Data Science for Marketing” [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE session to include Q&A and office hour (*Zoom*) (LIVE Q+A)"
+    - name: "4:00 - 5:30 Guest Speaker #4: [Shawndra Hill, Ph.D.](https://www8.gsb.columbia.edu/cbs-directory/detail/sbh2146), Senior lecturer, Marketing, Columbia Business School, “Data Science for Marketing” [(video)](https://youtu.be/1VQo-ye1MS0) - LIVE session to include Q&A and office hour (*Zoom*) (LIVE Q+A)"
     
 
 - date: 2022-07-01
   name: "Day 10: Present group projects"
   events:
     - name: "Mathematica TAs are available via email for consultation (please see Slack)"
-    - name: "10:00 - 10:30 Logistics (*Zoom*)"
-    - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2022 Keynote Address - Speaker TBA (*Zoom*)"
+    - name: "9:30 - 10:00 Logistics (*Zoom*)"
+    - name: "10:00 - 10:30"
+    - name: "10:30 - 12:00 SICSS-Howard/Mathematica 2022 Keynote Address: [Safiya Noble, Ph.D.](https://safiyaunoble.com/), MacArthur Foundation Fellow & Professor of Gender Studies and African American Studies at the University of California, Los Angeles (*Zoom*)"
     - name: "12:00 - 12:30 Break"
     - name: "12:30 - 12:50 Overview of Group and Individual Project Presentations (*Zoom*)"
     - name: "12:50 - 4:20 Group and Individual Project Presentations (*Zoom*)"
