--- a/_data/2022/covenant-university/schedule.yml
+++ b/_data/2022/covenant-university/schedule.yml
@@ -143,7 +143,7 @@
     - name: "**10:30-12:00** Introduction to Internet Search Data."
     - name: "**12:00-13:00** Tutorial: Machine Learning for Beginners"
     - name: "**13:00-14:00** Lunch"
-    - name: "**14:00-16:00** Tutorial: Maps with {leaflet}"
+    - name: "**14:00-16:00** Tutorial: Maps with `{leaflet}`"
     - name: "**16:00-18:00** Group Exercises"
     - name: "**18:00-** Dinner" 
 
