added missing participant

--- a/_data/2022/paris/participants.yml
+++ b/_data/2022/paris/participants.yml
@@ -80,3 +80,7 @@
 - name: Nadine Zwiener-Collins
   image: /assets/images/nadine_zwienercollins.jpg
   bio: Nadine Zwiener-Collins is a postdoctoral researcher in Politics and Gender, Diversity and Equality at the Department of Political Science at the University of Salzburg, funded by the Land Salzburg. Her interests include gender differences in political interest, attitudes, and participation and teaching critical data literacy skills.
+
+- name: Sascha Grehl
+  image: /assets/images/sascha_grehl.jpg
+  bio: Sascha Grehl is a PhD candidate in sociology at Leipzig University. His research is concerned with how prosocial and antisocial behavior can be explained using evolutionary dynamics and taking into account recent findings in cognitive research. While initially experimental, he has recently also been exploring agent-based models and their potential for explanations in the social sciences.
