--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -25,6 +25,7 @@
     - name: "13:30 - 15:30 Analyzing Twitter networks"
     - name: "15:30 - 16:00 Break"
     - name: "16:00 - 18:00 Research talk: Maria Wolters. 'When Counting and Modelling is not Enough: Case Studies from Health Research'"
+    - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"  
 
 - date: 2022-06-16
   name: Computational Text Analysis and NLP
