updated day 5 schedule for SG

--- a/_data/2022/singapore/schedule.yml
+++ b/_data/2022/singapore/schedule.yml
@@ -32,7 +32,7 @@
     - name: "13:00 - 17:00 Afternoon session and group activities"
 
 - date: Friday June 17, 2022
-  name: Topic TBC
+  name: Analysis of Social Networks
   events: 
     - name: "9:00 - 9:55 Morning session"
     - name: "10:00 - 11:55 Guest lecture (in person) by Dr. Prasanta Bhattacharya (A*STAR): Modeling the Dynamics of Social Networks and Behavior: Concepts, Methods and Applications."
