--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -23,11 +23,11 @@
   name: APIs and Digital Trace Data
   events:
     - name: "9:00 - 9:15 Check In"
-    - name: "9:15 - 10:30 Suhem Parack (Twitter)"
+    - name: "9:15 - 10:30 Ridhi Kashyap (Oxford University): Digital Trace Data Introduction"
     - name: "10:30 - 10:45 Coffee Break"
-    - name: "10:45 - 12:00 Ridhi Kashyap (Oxford University)"
+    - name: "10:45 - 12:00 Ridhi Kashyap: Digital Trace Data Case Studies Using Social Media Advertising Data"
     - name: "12:00 - 1:00 Lunch"
-    - name: "1:00 - 2:30 Group Exercises"
+    - name: "1:00 - 2:30 Suhem Parack (Twitter)"
     - name: "2:30 - 3:00 Break"
     - name: "3:00 - 4:30 Group Exercises"
     - name: "4:30 - 5:00 Wrap Up"
