--- a/_data/2022/edinburgh/schedule.yml
+++ b/_data/2022/edinburgh/schedule.yml
@@ -7,6 +7,7 @@
     - name: "14:00 - 16:00 APIs and web scraping"
     - name: "16:00 - 18:00 Research talk: Carolina Scarton. 'Supporting professional fact-checking: Can NLP/AI help?'"
     - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"  
+    - name: "Speaker slides [here](https://github.com/cjbarrie/sicss_22/blob/main/speaker_slides/scarton.pdf)"  
     
 - date: 2022-06-14
   name: Computational Social Science and Digital Research Methods
@@ -15,7 +16,7 @@
     - name: "13:00 - 14:00 Lunch Break"
     - name: "14:00 - 16:00 Intro. Qualitative Digital Research"       
     - name: "16:00 - 18:00 Research talk: Anita Gohdes. 'Distract and Divert: How World Leaders Use Social Media During Contentious Politics'"
-    - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"  
+    - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"
 
 - date: 2022-06-15
   name: Networks
@@ -26,6 +27,7 @@
     - name: "15:30 - 16:00 Break"
     - name: "16:00 - 18:00 Research talk: Maria Wolters. 'When Counting and Modelling is not Enough: Case Studies from Health Research'"
     - name: "Today's materials [here](https://github.com/cjbarrie/sicss_22)"  
+    - name: "Speaker slides [here](https://github.com/cjbarrie/sicss_22/blob/main/speaker_slides/wolters.pdf)"  
 
 - date: 2022-06-16
   name: Computational Text Analysis and NLP
