--- a/_data/2022/ndsu/schedule.yml
+++ b/_data/2022/ndsu/schedule.yml
@@ -1,4 +1,4 @@
-- date: All times are in Central Standard Time (CST); *Schedule is subject to change*
+- date: All times are in Central Daylight Time (CDT); *Schedule is subject to change*
 
 - date: June 19, 2022
   name: Welcoming Dinner
@@ -8,8 +8,8 @@
 - date: June 20, 2022 
   name: Introduction & Ethics
   events:
-  - name: "9:30 - 10:00 Introduction and logistics"
-  - name: "10:00 - 11:30 Overview of CSS and ethics"
+  - name: "9:30 - 10:30 Introduction and logistics"
+  - name: "10:30 - 11:30 Overview of CSS and ethics"
   - name: "11:30 - noon Research speed-dating"
   - name: "noon - 13:30 Lunch time"
   - name: "13:30 - 16:00 Small group activity"
