--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -58,6 +58,11 @@
   bio: "Wenhao Li is an undergraduate senior at the University of Minnesota and an incoming graduate student of University of Chicago's computational social science master's program this fall. His research interests are the application of biostatistical methods to economics and the Developmental Dictatorship."
   website: https://twitter.com/willlee62495429/
 
+- name: Xinyue (Gordon) Liu
+  image: /assets/images/gordonliu.jpg
+  bio: "Xinyue Liu is a Ph.D. student at North Dakota State University's Department of Communication. His research interests lie at the intersection of media effects and emerging media technologies, with a focus on how media platforms (both entertainment and instructional) can influence and facilitate users' psychological processing."
+  website: https://twitter.com/GordonXinyue
+
 - name: Loi A. Nguyen, Ph.D. 
   image: /assets/images/LoiAnhNguyen.jpg
   bio: "Loi A. Nguyen is an Assistant professor at Metropolitan State University. She holds a Ph.D. in Human Resource Development with a minor in Business Administration from University of Minnesota, Twin Cities. Her research has been published in books, and journals such as Management Learning, Journal of Economics and Development, Journal of Organisational Studies and Innovation."
