--- a/_data/2022/ndsu/participants.yml
+++ b/_data/2022/ndsu/participants.yml
@@ -59,7 +59,7 @@
   website: https://twitter.com/willlee62495429/
 
 - name: Xinyue (Gordon) Liu
-  image: /assets/images/gordonliu.jpg
+  image: /assets/images/gordonliu.JPG
   bio: "Xinyue Liu is a Ph.D. student at North Dakota State University's Department of Communication. His research interests lie at the intersection of media effects and emerging media technologies, with a focus on how media platforms (both entertainment and instructional) can influence and facilitate users' psychological processing."
   website: https://twitter.com/GordonXinyue
 
