--- a/_data/2022/covenant-university/participants.yml
+++ b/_data/2022/covenant-university/participants.yml
@@ -27,6 +27,11 @@
   image: /assets/images/
   bio: "<p align='justify'>Michael Ehinmowo is a master's student in the department of psychology at the University of Ibadan. His current research interest is at the nexus of mental health, collective behaviour, bioethics, and social policy. He is interested in employing emerging tools of computation in science.</p>"
   
+- name: Victoria Okafor
+  image: /assets/images/VOkafor.png
+  bio: "<p align='justify'>Victoria Okafor is a PhD candidate at Covenant University. Her research interest includes financial/monetary economics and development economics. She is also a research associate at the Centre for Economic Policy and Development Research. Her research involves understanding the dynamics of income distribution toward the sustainable development of Africa.</p>"
+  website: https://scholar.google.com/citations?user=By-AdooAAAAJ&hl=en
+    
 - name: Oluwaseyi Olopade
   image: /assets/images/
   bio: "<p align='justify'>Oluwaseyi Olopade is an early career researcher and a recent graduate of Financial Economics at the University of Johannesburg. Oluwaseyi’s current research aims to address the impact of out-of-pocket health expenditure and the state of well-being in Nigerian households. She holds an Honours Bachelor’s degree in Econometrics from the University of Johannesburg, and an undergraduate degree from Ajayi Crowther University.</p>"
