--- a/_data/2022/covenant-university/speakers.yml
+++ b/_data/2022/covenant-university/speakers.yml
@@ -9,7 +9,7 @@
   website: http://alburez.me/
   
 - name: Laurie Baker
-  image: /assets/images/LBaker.JPG
+  image: /assets/images/LBaker.jpg
   bio: "<p align='justify'>Laurie is a disease ecologist and marine biologist by training. She earned her BSc and MSc in marine biology at the University of St. Andrews and Dalhousie University (MSc) respectively, and her doctorate in epidemiology at the University of Glasgow. Laurie is a certified RStudio Instructor with a keen interest in programming, data science, and the use of novel data sources in research. The core of her research focuses on spatial and temporal patterns in human and biological systems including disease spread, animal movement, and fisheries management.</p>"
   website: https://lauriebaker.rbind.io/
 
