--- a/_data/2022/london/schedule.yml
+++ b/_data/2022/london/schedule.yml
@@ -43,10 +43,9 @@
     - name: "Location - ICBS Room LTG"
     - name: "9:30  - 10:00 Light breakfast (optional)"
     - name: "10:00 - 11:00 Online survey tutorial and exercise overview"
-    - name: "11:00 - 12:00 Survey design and launch"
-    - name: "12:00 - 1:00  Break for Lunch (provided)"
-    - name: "1:00  - 1:30  Exercise overview on non-representative sampling"
-    - name: "2:00  - 4:00  Small group survey analysis & presentations"
+    - name: "11:00 - 2:45 Group projects and lunch"
+    - name: "2:45 - 3:45 Discussion & presentations"
+    - name: "3:45 - 4:00 Break"
     - name: "4:00  - 5:30  Guest Keynote Seminar - Neave O'Clery"
 
 - date: 2022-06-17
