--- a/_data/2022/duke/schedule.yml
+++ b/_data/2022/duke/schedule.yml
@@ -8,14 +8,14 @@
   name: Introduction and Ethics
   events:
     - name: "9:00 - 9:15 Logistics"
-    - name: "9:15 - 9:30 Introductions"
-    - name: "9:30 - 11:00 Chris Bail (Duke University)"
-    - name: "11:00 - 11:15 Coffee Break"
-    - name: "11:15 - 12:00 Chris Bail continued"
+    - name: "9:15 - 9:40 Chris Bail (Duke University): [What is Computational Social Science?] (https://sicss.io/2022/materials/Intro_to_CSS/Intro_to_CSS.html)"
+    - name: "9:40 - 10:00 Chris Bail: [Why SICSS?] (https://sicss.io/2022/materials/Why_SICSS/Why_SICSS.html)"
+    - name: "10:00 - 10:15 Coffee Break"
+    - name: "10:15 - 12:00 Casey Fiesler (University of Colorado Boulder)"
     - name: "12:00 - 1:00 Lunch"
-    - name: "1:00 - 2:30 Casey Fiesler (University of Colorado Boulder)"
+    - name: "1:00 - 2:30 Group Exercises"
     - name: "2:30 - 3:00 Break"
-    - name: "3:00 - 4:30 Casey Fiesler continued"
+    - name: "3:00 - 4:30 Group Exercises"
     - name: "4:30 - 5:00 Wrap Up"
     - name: "6:00 - 7:00 Dinner"
 
@@ -62,6 +62,7 @@
     - name: "3:00 - 4:30 Group Exercises"
     - name: "4:30 - 5:00 Wrap Up"
     - name: "6:00 - 7:00 Dinner"
+    - name: "7:00 - 8:00 (Optional) Group Yoga Session"   
 
 - date: 2022-06-24
   name: Professionalization
