--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -132,7 +132,7 @@ panels:
       bio: "Lebogang is currently the Executive Director of Oxfam South Africa. Lebogang is an outspoken feminist thinker and strategist, a sought-after speaker, facilitator, and trainer who is passionate about social justice particularly for young women and girls. Lebogang combines her own life experience as a black woman who grew up in Apartheid South Africa, thrust into activism at an early age and the skills she acquired through her training to speak out against injustice wherever she goes. She is one of the prominent media commentators and advocates on various social issues facing women in South Africa."
       website: https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true
       
-    - name: Yahya Shaikh
+    - name: Yahya Shaikh, M.D.
       image: /assets/images/Yahya_Shaikh.jpeg
       bio: "Dr. Yahya Shaikh is a physician specializing in primary care and public health. His public health practice and training includes human rights and humanitarian assistance. His research has focused on the application of decolonizing methodologies in research. He previously served on a federal Task Force where he was focused on ensuring that the future of technology and health is equitably distributed. He is currently at MITRE where he is helping shape participatory methodologies for research and policy development."
       website: https://www.linkedin.com/in/yahya-shaikh-45646752/
