--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -287,13 +287,13 @@
       
         **Speakers**
       
-          - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg (slide) [(video)](https://youtu.be/MAV5azDk2Vs)
-          
-          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria (slide) [(video)](https://youtu.be/_Jny4h9RN4M)
+          - [Bhaso Ndzendze, Ph.D.](https://bhasondzendze.co.za), Senior Lecturer and Head of Department, Politics and International Relations, University of Johannesburg [(slide)](https://docs.google.com/presentation/d/1vOVFjjH1CqJ6hG-9AZZTWsahHUGtZbKa/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/MAV5azDk2Vs)
+         
+          - [Evans Osabuohien, Ph.D.](https://evansosabuohien.com/), Professor of Economics and Head of Department, Economics & Development Studies, Covenant University, Nigeria [(slide)](https://docs.google.com/presentation/d/1LJudPwHB2qHki8VXCNgLx_fqdBSIG244/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/_Jny4h9RN4M)
 
           - [Lebogang Ramafoko](https://docs.google.com/document/d/1cs3rwShBjHTNd6AN8swy9eRR_fQrS0aA/edit), Executive Director of Oxfam South Africa [(video)](https://youtu.be/phQb-p_8t18)
           
-          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE (slide) [(video)](https://youtu.be/vol058K8AvU)
+          - [Yahya Shaikh, M.D.](https://www.linkedin.com/in/yahya-shaikh-45646752), Principal Scientist, Connected Health Systems, MITRE [(slide)](https://docs.google.com/presentation/d/1TemY8bI8JfEnjPS6mk0ikaHgGU22p6XB/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/vol058K8AvU)
 
 
           
@@ -328,13 +328,13 @@
      
         **Speakers**
       
-          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor of Media Studies at Georgia Tech [(book)](https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375) [(video)](https://youtu.be/k-MidbsQoEQ)
+          - [Andre Brock, Ph.D.](https://andrebrock.academia.edu/), Associate Professor, Media Studies, Georgia Institute of Technology [(book)](https://nyu.universitypressscholarship.com/view/10.18574/nyu/9781479820375.001.0001/upso-9781479820375) [(video)](https://youtu.be/k-MidbsQoEQ)
 
-          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor of Social Work at Columbia University [(slide)](https://docs.google.com/presentation/d/1U7x1H2bDCHDdQQEHnstSjfSovNMi0Qeq_NrtqKkOrJo/edit?usp=sharing) [(video)](https://youtu.be/bM-NWBkZMVA)
+          - [Courtney D. Cogburn, Ph.D.](https://socialwork.columbia.edu/faculty-research/faculty/full-time/courtney-d-cogburn/), Associate Professor, School of Social Work, Columbia University [(slide)](https://docs.google.com/presentation/d/1U7x1H2bDCHDdQQEHnstSjfSovNMi0Qeq_NrtqKkOrJo/edit?usp=sharing) [(video)](https://youtu.be/bM-NWBkZMVA)
 
-          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor of Computer and Information Science and Engineering at University of Florida [(slide)](https://docs.google.com/presentation/d/1VJ-vQrY05OioTb66HtvsGQs1X4G3U9sN/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/Z8nhr1CAgvA)
+          - [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer and Information Science and Engineering, University of Florida [(slide)](https://docs.google.com/presentation/d/1VJ-vQrY05OioTb66HtvsGQs1X4G3U9sN/edit?usp=sharing&ouid=112934598660812456864&rtpof=true&sd=true) [(video)](https://youtu.be/Z8nhr1CAgvA)
           
-          - [Danielle Olson, Ph.D.](http://hellodanio.com/about.html), AI/ML Human Factors Researcher at Apple [(video)](https://youtu.be/HzuoBq3RcW0)
+          - [Danielle Olson, Ph.D.](http://hellodanio.com/about.html), AI/ML Human Factors Researcher, Apple [(video)](https://youtu.be/HzuoBq3RcW0)
 
 
           
@@ -355,7 +355,7 @@
     - name: "10:00 - 12:00 Work on group projects (*Zoom*)"
     - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk #6: Campus-Wide Institutional Survey Research and Data Collection (Graduate Division UC Berkeley) (*Zoom*) [(video)](https://youtu.be/tJCiuUxKe1Y) (LIVE Q+A) OR R, Python, and STATA Office hours with Mathematica TAs (as needed) (*Zoom*)
     
-        - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost for Graduate Studies, Dean of the Graduate Division, & Professor Graduate School of Education"  
+        - [Lisa García Bedolla, Ph.D.](https://gse.berkeley.edu/lisa-garc%C3%ADa-bedolla), Vice Provost for Graduate Studies, Dean of the Graduate Division, & Professor Graduate School of Education, UC Berkeley"  
         
     - name: "1:00 - 4:00 Work on group projects (*Zoom*)"
     - name: '4:00 - 5:30 Guest Speaker #3: [Kyla McMullen, Ph.D.](http://kylamcmullen.com/), Associate Professor, Computer Science, University of Florida, "Using Uncommon data to understand society and its people" [(video)](https://youtu.be/EGxZaL3VRpM) - LIVE session to include Q&A and office hour [(slide)](https://docs.google.com/presentation/d/1R4f-nZbU5ZMBJOMRJn9oYIQZrizOb2VxoeYxyrMBZDE/edit?usp=sharing) (*Zoom*) (LIVE Q+A)'
