--- a/_data/2022/hong-kong/schedule.yml
+++ b/_data/2022/hong-kong/schedule.yml
@@ -50,7 +50,7 @@
   name: Audio Analysis
   events:
     - name: "09:30 - 10:30 Talk by Christopher Lucas"
-    - name: "10:45 - 11:45 Talk by Haohan Chen"
+    - name: "10:45 - 11:45 Talk by instructor (Haohan Chen)"
     - name: Work on group projects (optional) and/or participate in SICSS Festival
 
 - date: 2022-06-29
