--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -11,13 +11,13 @@
      
         **Speakers**
       
-          - Carter Clinton, Ph.D., Post-Doc Scholar, Penn State, Genetic Anthropologist
+          - [Carter Clinton, Ph.D.](https://www.carterclinton.com/home), Post-Doc Scholar, Penn State, Genetic Anthropologist
 
-          - Sandra R. Kalu, Ph.D., LMSW, Assistant Professor, School of Social Work, Howard University
+          - [Sandra R. Kalu, Ph.D.](https://www.sandrakalu.com/about), LMSW, Assistant Professor, School of Social Work, Howard University
           
-          - Williams Spriggs, Ph.D., Professor, Economics Department, Howard University & Chief Economist for the AFL-CIO
+          - [Williams Spriggs, Ph.D.](https://aflcio.org/policy-experts/william-e-spriggs), Professor, Economics Department, Howard University & Chief Economist for the AFL-CIO
 
-          - Shannelle Thomas, Ph.D., Assistant Professor, Sociology, Bowie State University
+          - [Shannelle Thomas, Ph.D.](https://bowiestate.edu/academics/colleges/college-of-professional-studies/departments/behavioral-sciences-and-human-services/faculty-and-staff.php), Assistant Professor, Sociology, Bowie State University
 
 
           
