--- a/_data/2022/hong-kong/participants.yml
+++ b/_data/2022/hong-kong/participants.yml
@@ -1,1 +1,5 @@
-- name:
+- name: Hanyu BAO
+  image: /assets/images/Huanyu BAO.JPG
+  bio: "Hanyu BAO a PhD Candidate at Nanyang Technological University, Singapore. Her research interests are health technology and public health communication. Specifically, how health technology can be used to benefit different social groups in both physical and mental health, and how to bridge inequalities in the field of health technology and big data. Currently, she is working on projects on (a) health apps and wearables use among the unprivileged in Singapore, (b) data absenteeism and data chauvinism on different social media platforms."
+  
+  
