--- a/_data/2022/hong-kong/speakers.yml
+++ b/_data/2022/hong-kong/speakers.yml
@@ -26,6 +26,12 @@
   image: /assets/images/agromis.png
   bio: "Ashley Gromis is a postdoctoral research associate at the Eviction Lab of Princeton University. She completed her PhD in sociology at the University of California, Los Angeles. Her research focuses on how social networks and local communities provide the social context for individual decisions and events that aggregate to form macro-level patterns across space and time."
   website: https://sociology.princeton.edu/people/ashley-gromis
+  
+
+- name: David Hagmann
+  image: /assets/images/davidhagmann.jpeg
+  bio: "David Hagmann is an assistant professor at the Department of Management, The Hong Kong University of Science and Technology. He received his PhD from the Department of Social and Decision Sciences at Carnegie Mellon University. His research draws on experimental tools from psychology and economics to study how people engage with information and how this affects the decisions they make."
+  website: https://www.dhagmann.com/
 
 
 - name: Bo Huang
