--- a/_data/2022/lisbon/participants.yml
+++ b/_data/2022/lisbon/participants.yml
@@ -21,6 +21,10 @@
   bio: "Leonie Gehrmann is a doctoral candidate in Quantitative Marketing at the University of Mannheim. She obtained both her Bachelor (Economics) and Master (Business Research) degree there as well. Her research mainly focuses on machine learning applications in marketing and consumer psychology. Current projects center on the analysis of text and image data from advertisements. As a lecturer, she teaches courses on Marketing Analytics and R."
   image: /assets/images/LeonieGehrmann.jpg
   website: https://www.bwl.uni-mannheim.de/en/quantitativemarketing/team/leonie-gehrmann/
+- name: Marc Pocsay
+  bio: "Marc Pocsay is a pre-PhD student at the Graduate School of Business and Economics at Maastricht University. He has worked as a research assistant and econometrics tutors at the same university. His research interests include corporate entrepreneurship and innovation at established corporations. His most recent work has been focused on the corporate venture capital behaviour of family and founder controlled firms."
+  image: /assets/images/MarcPocsay.jpg
+  website: https://www.linkedin.com/in/marc-pocsay/  
 - name: Muhammad Masood
   bio: "Muhammad Masood is a PhD Candidate at the Department of Media and Communication, City University of Hong Kong, HKSAR. His research focuses on the impacts of digital media use, political communication, public opinion, and civic engagement. Masood's PhD dissertation examines the pro-religious-minority implications of digital media use in Pakistan. He studied in four countries and won multiple international fully funded scholarships and research grants. He has published research papers and presented research at numerous scientific conferences across the world."
   image: /assets/images/MuhammadMasood.jpg
