--- a/_data/2022/hong-kong/teaching_assistants.yml
+++ b/_data/2022/hong-kong/teaching_assistants.yml
@@ -4,5 +4,5 @@
   website: http://yujie.li/
   
 - name: Li LIAO
-  image: /assets/images/Li LIAO.jpg
+  image: /assets/images/LiLIAOTA.jpg
   bio: "Li Liao is a PhD candidate at the University of Hong Kong. He studies authoritarianism and public administration. He’s interested in data visualization and text as data."
